[project]
name = "agent-support-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.76",
    "langchain>=1.0.8",
    "langchain-aws>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.6",
    "langgraph>=1.0.3",
    "tavily-python>=0.7.13",
]
